src/objects/AnyLabel__c.object
<CustomObject>
    <fields>
        <fullName>Assignee__c</fullName>
        <label>Assignee</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SObject</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background_Color__c</fullName>
        <label>Background Color</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color__c</fullName>
        <label>Font Color</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AnyLabel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assignee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AnyLabels</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>mustHaveAssignee</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNULL(Assignee__c), true, false)</errorConditionFormula>
        <errorDisplayField>Assignee__c</errorDisplayField>
        <errorMessage>Unassigned labels cannot be saved, can only be deleted.</errorMessage>
    </validationRules>
</CustomObject>